--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ yarn dev</code></pre>
 		<div>
 			<div class="uk-card uk-card-default uk-card-hover uk-card-body">
 				<h3 class="uk-card-title"><span uk-icon="tag"></span></h3>
-				<p></p>
+				<p>JavaScript</p>
 			</div>
 		</div>
 		<div>
