--- a/index.html
+++ b/index.html
@@ -104,21 +104,19 @@ yarn dev</code></pre>
 <ul>
 <li><a href="https://ghub.io/@nuxtjs/axios">@nuxtjs/axios</a>: Secure and easy axios integration with Nuxt.js</li>
 <li><a href="https://ghub.io/@nuxtjs/pwa">@nuxtjs/pwa</a>: 👉 Please refer to <a href="https://github.com/nuxt-community/pwa-module">nuxt-community/pwa-module</a> for documentation.</li>
+<li><a href="https://ghub.io/@nuxtjs/vuetify">@nuxtjs/vuetify</a>: Vuetify Module for Nuxt.js</li>
 <li><a href="https://ghub.io/axios">axios</a>: Promise based HTTP client for the browser and node.js</li>
 <li><a href="https://ghub.io/body-parser">body-parser</a>: Node.js body parsing middleware</li>
 <li><a href="https://ghub.io/cookie-session">cookie-session</a>: cookie session middleware</li>
 <li><a href="https://ghub.io/cross-env">cross-env</a>: Run scripts that set and use environment variables across platforms</li>
 <li><a href="https://ghub.io/express">express</a>: Fast, unopinionated, minimalist web framework</li>
 <li><a href="https://ghub.io/nuxt">nuxt</a>: A minimalistic framework for server-rendered Vue.js applications (inspired by Next.js)</li>
-<li><a href="https://ghub.io/source-map-support">source-map-support</a>: Fixes stack traces for files with source maps</li>
 <li><a href="https://ghub.io/vue">vue</a>: Reactive, component-oriented view layer for modern web interfaces.</li>
 <li><a href="https://ghub.io/vuetify">vuetify</a>: Vue.js 2 Semantic Component Framework</li>
 </ul>
 <h2 id="dev-dependencies"><a href="#dev-dependencies">Dev Dependencies</a></h2>
 <ul>
-<li><a href="https://ghub.io/backpack-core">backpack-core</a>: Backpack is a minimalistic build system for Node.js</li>
-<li><a href="https://ghub.io/stylus">stylus</a>: Robust, expressive, and feature-rich CSS superset</li>
-<li><a href="https://ghub.io/stylus-loader">stylus-loader</a>: Stylus loader for webpack</li>
+<li><a href="https://ghub.io/nodemon">nodemon</a>: Simple monitor script for use during development of a node.js app.</li>
 </ul>
 <h2 id="contributors"><a href="#contributors">Contributors</a></h2>
 <p>Pull requests and stars are always welcome. For bugs and feature requests, please <a href="https://github.com/TiagoDanin/VueJs-with-Express/issues">create an issue</a>. <a href="https://github.com/TiagoDanin/VueJs-with-Express/graphs/contributors">List of all contributors</a>.</p>
@@ -136,7 +134,7 @@ yarn dev</code></pre>
 		<div>
 			<div class="uk-card uk-card-default uk-card-hover uk-card-body">
 				<h3 class="uk-card-title"><span uk-icon="tag"></span></h3>
-				<p>JavaScript</p>
+				<p>Vue</p>
 			</div>
 		</div>
 		<div>
