Update GitHub Page: 11/15/2022 22:18

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@ description: Contact Me &amp; Social Media.
 
 <ul class="uk-child-width-expand@s uk-margin-auto uk-text-center" uk-grid="">
 	<li><a href="https://github.com/TiagoDanin"><i class="ti-github"></i> GitHub</a></li>
-	<li><a href="https://twitter.com/_TiagoEDGE"><i class="ti-twitter-alt"></i> Twitter</a></li>
+	<li><a href="https://twitter.com/TiagoDanin"><i class="ti-twitter-alt"></i> Twitter</a></li>
 	<li><a href="https://telegram.me/TiagoEDGE"><i class="ti-user"></i> Telegram</a></li>
-	<li><a href="https://Linkedin.com/in/tiagodanin/"><i class="ti-linkedin"></i> LinkedIn</a></li>
+	<li><a href="https://Linkedin.com/in/TiagoDanin/"><i class="ti-linkedin"></i> LinkedIn</a></li>
 	<li><a href="mailto:TiagoDanin@outlook.com"><i class="ti-email"></i> Email</a></li>
 	<li><a href="/all-contacts"><i class="ti-more-alt"></i> More</a></li>
 </ul>
@@ -230,7 +230,7 @@ description: Contact Me &amp; Social Media.
 			<p class="uk-align-center">
 				<small>
 					<span uk-icon="code"></span> with <span uk-icon="heart"></span> by <a href="https://github.com/TiagoDanin">Tiago Danin</a>.
-					<br>Built with <a href="https://github.com/jus/jus" target="_blank">Jus</a> and <a href="https://getuikit.com" target="_blank">UiKit</a> and <a href="https://github.com/CuboHub" target="_blank">CuboHub</a>.
+					<br>Built with <a href="https://github.com/TiagoDanin/jus-lite" target="_blank">jus-lite</a> and <a href="https://getuikit.com" target="_blank">UiKit</a> and <a href="https://github.com/CuboHub" target="_blank">CuboHub</a>.
 					<br>Hosted in <a href="https://pages.github.com" target="_blank">GitHub Pages</a>. View <a href="/sitemap" target="_blank">Site Map</a>.
 				</small>
 			</p>
